# RustCC

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  simple_complex.c  test.c  test_include_path.sh  test_macro.h
rustcc/: Cargo.toml  README.md  new_test.c  output.s  test_no_includes.c
rustcc/docs/: preprocessing.md
rustcc/examples/: compiler_demo.rs  preprocessor_demo.rs
rustcc/include/: stdio.h
rustcc/src/: cli.rs  compiler.rs  config.rs  lib.rs  main.rs  preprocessor.rs
rustcc/src/analyzer/: mod.rs
rustcc/src/codegen/: llvm.rs  mod.rs  x86_64.rs
rustcc/src/parser/: ast.rs  declarations.rs  error.rs  expressions.rs  lexer.rs  mod.rs  parser.rs  statements.rs  token.rs  types.rs  utils.rs
rustcc/src/parser/declarations/: mod.rs
rustcc/src/parser/expressions/: mod.rs  parser.rs
rustcc/src/parser/lexer/: identifiers.rs  lexer.rs  literals.rs  mod.rs  operators.rs  preprocessor.rs  scanner.rs  token_definitions.rs  utils.rs
rustcc/src/parser/preprocessor/: mod.rs
rustcc/src/parser/statements/: mod.rs
rustcc/src/parser/tests_for_parser/: lexer_integration_test.rs  lexer_test.rs  token_test.rs
rustcc/src/preprocessor/: gcc.rs  mod.rs  native.rs  tests.rs
rustcc/src/transforms/: api.rs  control_flow.rs  mod.rs  obfuscation.rs  optimization.rs  optimization_test.rs  string.rs
rustcc/src/transfroms/: api.rs  control_flow.rs
rustcc/test/include/: myheader.h  test.c  test_include_path.sh  test_preprocessed.c
rustcc/tests/: c11_features_test.rs  complex.c  control_flow.c  simple.c  strings.c  test.c  test2.c
rustcc/tests/test/: complex.c
(+40 files in other folders)
