[package]
name = "rustcc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
clap = "4.4.11"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
optional = true
features = ["llvm16-0"]

[features]
default = []
llvm-backend = ["inkwell"]

[dev-dependencies]
tempfile = "3.8.1"
