[package]
name = "rustcc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
clap = "4.4.11"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
serde_json = "1.0.140"
tempfile = "3.8.1"
regex = "1.10.2"
chrono = "0.4.31"

# LLVM dependencies are optional
[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
optional = true
features = ["llvm16-0"]

[features]
# LLVM backend is now an explicit optional feature, not included by default
default = []
llvm-backend = ["inkwell"]

[dev-dependencies]
tempfile = "3.8.1"
